--- a/students.html
+++ b/students.html
@@ -106,101 +106,12 @@
         <h2 id="long">長期アルバイト</h2>
         <div class="container mt-4">
           <div class="row gy-3">
+            <script type="text/javascript" src="js/long.js"></script>
             <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image1.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image2.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image3.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image4.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image5.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image6.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image7.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image8.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image9.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image10.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image11.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image12.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image13.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image14.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image15.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image16.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image17.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image18.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image19.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image20.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image21.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image22.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image23.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image24.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image25.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image26.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image27.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image28.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image29.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image30.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image31.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/long/image32.jpg" alt="アルバイト情報" />
+              <img
+                src="images/long/元氣亭バイト募集チラシ.jpg"
+                alt="アルバイト情報"
+              />
             </div>
           </div>
         </div>
@@ -208,30 +119,14 @@
         <h2 id="short">短期アルバイト</h2>
         <div class="container mt-4">
           <div class="row gy-3">
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/short/image1.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/short/image2.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/short/image3.jpg" alt="アルバイト情報" />
-            </div>
+            <script type="text/javascript" src="js/short.js"></script>
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
         <h2 id="single">単発バイト</h2>
         <div class="container mt-4">
           <div class="row gy-3">
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/single/image1.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/single/image2.jpg" alt="アルバイト情報" />
-            </div>
-            <div class="col-lo-4 col-sm-6">
-              <img src="images/single/image3.jpg" alt="アルバイト情報" />
-            </div>
+            <script type="text/javascript" src="js/single.js"></script>
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
@@ -239,18 +134,7 @@
           <h1 id="volunteer">ボランティア募集</h1>
           <div class="container mt-4">
             <div class="row gy-3">
-              <div class="col-lo-4 col-sm-6">
-                <img src="images/volunteer/image1.jpg" alt="ボランティア情報" />
-              </div>
-              <div class="col-lo-4 col-sm-6">
-                <img src="images/volunteer/image2.jpg" alt="ボランティア情報" />
-              </div>
-              <div class="col-lo-4 col-sm-6">
-                <img src="images/volunteer/image4.jpg" alt="ボランティア情報" />
-              </div>
-              <div class="col-lo-4 col-sm-6">
-                <img src="images/volunteer/image5.jpg" alt="ボランティア情報" />
-              </div>
+              <script type="text/javascript" src="js/volunteer.js"></script>
             </div>
           </div>
         </div>
@@ -260,9 +144,7 @@
           <h1 id="others">その他イベント</h1>
           <div class="container mt-4">
             <div class="row gy-3">
-              <div class="col-lo-4 col-sm-6">
-                <img src="images/others/image1.jpg" alt="イベント情報" />
-              </div>
+              <script type="text/javascript" src="js/others.js"></script>
             </div>
           </div>
         </div>
