--- a/record.html
+++ b/record.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
   </head>
-  <body id="home">
+  <body>
     <!-- header begin -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
