meta　description 更新

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="砂丘の恵みの納品依頼、通称「すなめぐ」の活動紹介のページです。"
+      content="砂丘の恵みの納品依頼、通称「すなめぐ」の活動紹介のページです。各部門で何をしているかを紹介しています。"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
