--- a/company.html
+++ b/company.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="企業の方への砂丘の恵みの納品依頼、通称「すなめぐ」のページです。"
+      content="砂丘の恵みの納品依頼、通称「すなめぐ」の企業の方へのページです。団体設立のきっかけや活動に対する思いを掲載しています。"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
