--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="砂丘の恵みの納品依頼、通称「すなめぐ」へのお問い合わせのページです。"
+      content="砂丘の恵みの納品依頼、通称「すなめぐ」へのお問い合わせのページです。メールアドレス・各種SNSへのリンクやQRコードを掲載しています。"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
