--- a/students.html
+++ b/students.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="学生の方への砂丘の恵みの納品依頼、通称「すなめぐ」のページです。"
+      content="砂丘の恵みの納品依頼、通称「すなめぐ」の学生の方向けのページです。アルバイト・ボランティア情報を掲載しています。"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
