--- a/home.html
+++ b/home.html
@@ -124,6 +124,15 @@
       </div>
     </footer>
     <!-- footer end -->
+    <script type="application/ld+json">
+      {
+        "@context” : "http://schema.org",
+        "@type" : "WebSite",
+        "name" : "砂丘の恵みの納品依頼"
+        "alternateName" : すなめぐ,
+        "url" : "https://sunamegu.net"
+      }
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
