--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
     <title>砂丘の恵みの納品依頼</title>
     <script type="application/ld+json">
       {
-        "@context” : "http://schema.org",
+        "@context" : "http://schema.org",
         "@type" : "WebSite",
         "name" : "砂丘の恵みの納品依頼"
-        "alternateName" : すなめぐ,
+        "alternateName" : "すなめぐ",
         "url" : "https://sunamegu.net"
       }
     </script>
