--- a/company.html
+++ b/company.html
@@ -89,10 +89,10 @@
     <!-- main begin -->
     <main>
       <div class="documents wrapper">
-        <img src="images/introduction.PNG" alt="「すなめぐ」とは？" />
-        <img src="images/life.PNG" alt="学生の生活実態" />
-        <img src="images/chance.PNG" alt="団体設立のきっかけ" />
-        <img src="images/ambition.PNG" alt="この活動に対する思い" />
+        <img src="images/introduction.jpg" alt="「すなめぐ」とは？" />
+        <img src="images/life.jpg" alt="学生の生活実態" />
+        <img src="images/chance.jpg" alt="団体設立のきっかけ" />
+        <img src="images/ambition.jpg" alt="この活動に対する思い" />
       </div>
 
       <div class="wrapper">
@@ -119,5 +119,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="js/footerFixed.js"></script>
+    <script type="text/javascript" src="modernizr-custom.js"></script>
   </body>
 </html>
