--- a/contact.html
+++ b/contact.html
@@ -96,13 +96,13 @@
         <div class="information">
           <div class="sns">
             <div class="flex">
-              <img class="qr" src="images/QR_LINE.png" alt="LINEのQRコード" />
+              <img class="qr" src="images/QR_LINE.jpg" alt="LINEのQRコード" />
               <a class="url" href="https://page.line.me/296lnbtf">公式LINE</a>
             </div>
             <div class="flex">
               <img
                 class="qr"
-                src="images/QR_twitter.png"
+                src="images/QR_twitter.jpg"
                 alt="TwitterのQRコード"
               />
               <a class="url" href="https://twitter.com/sunamegu_megumi"
@@ -112,7 +112,7 @@
             <div class="flex">
               <img
                 class="qr"
-                src="images/sunagemu_megumi_qr.png"
+                src="images/sunagemu_megumi_qr.jpg"
                 alt="InstagramのQRコード"
               />
               <a class="url" href="https://www.instagram.com/sunagemu_megumi/"
@@ -144,5 +144,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="js/footerFixed.js"></script>
+    <script type="text/javascript" src="modernizr-custom.js"></script>
   </body>
 </html>
