--- a/students.html
+++ b/students.html
@@ -117,10 +117,9 @@
       </div>
       <div class="wrapper">
         <h1 id="albite">アルバイト募集</h1>
-        <h2 id="long">長期アルバイト</h2>
+        <h2>長期アルバイト</h2>
         <div class="container mt-4">
-          <div class="row gy-3">
-            <script type="text/javascript" src="js/long.js"></script>
+          <div id="long" class="row gy-3">
             <div class="col-lo-4 col-sm-6">
               <img
                 src="images/long/元氣亭バイト募集チラシ.jpg"
@@ -130,24 +129,24 @@
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
-        <h2 id="short">短期アルバイト</h2>
+        <h2>短期アルバイト</h2>
         <div class="container mt-4">
-          <div class="row gy-3">
+          <div id="short" class="row gy-3">
             <script type="text/javascript" src="js/short.js"></script>
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
-        <h2 id="single">単発バイト</h2>
+        <h2>単発バイト</h2>
         <div class="container mt-4">
-          <div class="row gy-3">
+          <div id="single" class="row gy-3">
             <script type="text/javascript" src="js/single.js"></script>
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
         <div class="wrapper">
-          <h1 id="volunteer">ボランティア募集</h1>
+          <h1>ボランティア募集</h1>
           <div class="container mt-4">
-            <div class="row gy-3">
+            <div id="volunteer" class="row gy-3">
               <script type="text/javascript" src="js/volunteer.js"></script>
             </div>
           </div>
@@ -155,9 +154,9 @@
         <div class="top"><a href="#">Topへ</a></div>
 
         <div class="wrapper">
-          <h1 id="others">その他イベント</h1>
+          <h1>その他イベント</h1>
           <div class="container mt-4">
-            <div class="row gy-3">
+            <div id="others" class="row gy-3">
               <script type="text/javascript" src="js/others.js"></script>
             </div>
           </div>
@@ -181,5 +180,6 @@
     ></script>
     <script type="text/javascript" src="js/footerFixed.js"></script>
     <script type="text/javascript" src="modernizr-custom.js"></script>
+    <script type="text/javascript" src="js/long.js"></script>
   </body>
 </html>
