--- a/home.html
+++ b/home.html
@@ -94,7 +94,22 @@
     <!-- main begin -->
     <main>
       <div class="documents wrapper">
-        <img src="images/砂丘の恵みの納品依頼.jpg" alt="メインテーマ" />
+        <picture>
+          <source
+            srcset="./images/砂丘の恵みの納品依頼.webp"
+            media="(max-width:500px)"
+            type="image/webp"
+          />
+          <source
+            srcset="./images/砂丘の恵みの納品依頼.jpg"
+            media="(max-width:500px)"
+          />
+          <source
+            srcset="./images/砂丘の恵みの納品依頼.webp"
+            type="image/webp"
+          />
+          <img src="images/砂丘の恵みの納品依頼.jpg" alt="メインテーマ" />
+        </picture>
       </div>
 
       <div class="wrapper">
@@ -102,7 +117,22 @@
         <div class="container mt-4">
           <div class="row gy-3">
             <div class="col-lo-4 col-sm-6">
-              <img src="images/company/tokudashoten.jpg" alt="徳田商店" />
+              <picture>
+                <source
+                  srcset="./images/company/tokudashoten.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="./images/company/tokudashoten.jpg"
+                  media="(max-width:500px)"
+                />
+                <source
+                  srcset="./images/company/tokudashoten.webp"
+                  type="image/webp"
+                />
+                <img src="images/company/tokudashoten.jpg" alt="徳田商店" />
+              </picture>
             </div>
           </div>
         </div>
