--- a/home.html
+++ b/home.html
@@ -96,18 +96,15 @@
       <div class="documents wrapper">
         <picture>
           <source
-            srcset="./images/砂丘の恵みの納品依頼.webp"
+            srcset="images/砂丘の恵みの納品依頼.webp"
             media="(max-width:500px)"
             type="image/webp"
           />
           <source
-            srcset="./images/砂丘の恵みの納品依頼.jpg"
+            srcset="images/砂丘の恵みの納品依頼.jpg"
             media="(max-width:500px)"
           />
-          <source
-            srcset="./images/砂丘の恵みの納品依頼.webp"
-            type="image/webp"
-          />
+          <source srcset="images/砂丘の恵みの納品依頼.webp" type="image/webp" />
           <img src="images/砂丘の恵みの納品依頼.jpg" alt="メインテーマ" />
         </picture>
       </div>
@@ -119,16 +116,16 @@
             <div class="col-lo-4 col-sm-6">
               <picture>
                 <source
-                  srcset="./images/company/tokudashoten.webp"
+                  srcset="images/company/tokudashoten.webp"
                   media="(max-width:500px)"
                   type="image/webp"
                 />
                 <source
-                  srcset="./images/company/tokudashoten.jpg"
+                  srcset="images/company/tokudashoten.jpg"
                   media="(max-width:500px)"
                 />
                 <source
-                  srcset="./images/company/tokudashoten.webp"
+                  srcset="images/company/tokudashoten.webp"
                   type="image/webp"
                 />
                 <img src="images/company/tokudashoten.jpg" alt="徳田商店" />
