--- a/about.html
+++ b/about.html
@@ -85,29 +85,90 @@
     <!-- header end -->
     <!-- main begin -->
     <div class="documents wrapper">
-      <img src="images/pamphlet_page-0001.jpg" alt="パンフレット1" />
-      <img src="images/pamphlet_page-0002.jpg" alt="パンフレット2" />
+      <picture>
+        <source
+          srcset="images/pamphlet_page-0001.webp"
+          media="(max-width:500px)"
+          type="image/webp"
+        />
+        <source
+          srcset="images/pamphlet_page-0001.jpg"
+          media="(max-width:500px)"
+        />
+        <source srcset="images/pamphlet_page-0001.webp" type="image/webp" />
+        <img src="images/ambition.jpg" alt="この活動に対する思い" />
+        <img src="images/pamphlet_page-0001.jpg" alt="パンフレット1" />
+      </picture>
+      <picture>
+        <source
+          srcset="images/pamphlet_page-0002.webp"
+          media="(max-width:500px)"
+          type="image/webp"
+        />
+        <source
+          srcset="images/pamphlet_page-0002.jpg"
+          media="(max-width:500px)"
+        />
+        <source srcset="images/pamphlet_page-0002.webp" type="image/webp" />
+        <img src="images/pamphlet_page-0002.jpg" alt="パンフレット2" />
+      </picture>
     </div>
     <div class="wrapper">
       <h1>各部門について</h1>
       <h2>食料配布部門</h2>
       <div class="documents wrapper">
-        <img src="images/食料.jpg" alt="食料関係部門" />
+        <picture>
+          <source
+            srcset="images/食料.webp"
+            media="(max-width:500px)"
+            type="image/webp"
+          />
+          <source srcset="images/食料.jpg" media="(max-width:500px)" />
+          <source srcset="images/食料.webp" type="image/webp" />
+          <img src="images/食料.jpg" alt="食料関係部門" />
+        </picture>
       </div>
       <h2>アルバイト・ボランティア関係部門</h2>
       <div class="documents wrapper">
-        <img
-          src="images/アルバイト.jpg"
-          alt="アルバイト・ボランティア関係部門"
-        />
+        <picture>
+          <source
+            srcset="images/アルバイト.webp"
+            media="(max-width:500px)"
+            type="image/webp"
+          />
+          <source srcset="images/アルバイト.jpg" media="(max-width:500px)" />
+          <source srcset="images/アルバイト.webp" type="image/webp" />
+          <img
+            src="images/アルバイト.jpg"
+            alt="アルバイト・ボランティア関係部門"
+          />
+        </picture>
       </div>
       <h2>デザイン関係部門</h2>
       <div class="documents wrapper">
-        <img src="images/デザイン.jpg" alt="デザイン関係部門" />
+        <picture>
+          <source
+            srcset="images/デザイン.webp"
+            media="(max-width:500px)"
+            type="image/webp"
+          />
+          <source srcset="images/デザイン.jpg" media="(max-width:500px)" />
+          <source srcset="images/デザイン.webp" type="image/webp" />
+          <img src="images/デザイン.jpg" alt="デザイン関係部門" />
+        </picture>
       </div>
       <h2>農業関係部門</h2>
       <div class="documents wrapper">
-        <img src="images/農業.jpg" alt="農業関係部門" />
+        <picture>
+          <source
+            srcset="images/農業.webp"
+            media="(max-width:500px)"
+            type="image/webp"
+          />
+          <source srcset="images/農業.jpg" media="(max-width:500px)" />
+          <source srcset="images/農業.webp" type="image/webp" />
+          <img src="images/農業.jpg" alt="農業関係部門" />
+        </picture>
       </div>
     </div>
     <!-- main end -->
