--- a/contact.html
+++ b/contact.html
@@ -96,25 +96,64 @@
         <div class="information">
           <div class="sns">
             <div class="flex">
-              <img class="qr" src="images/QR_LINE.jpg" alt="LINEのQRコード" />
+              <picture>
+                <source
+                  srcset="images/QR_LINE.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source srcset="images/QR_LINE.jpg" media="(max-width:500px)" />
+                <source srcset="images/QR_LINE.webp" type="image/webp" />
+                <img class="qr" src="images/QR_LINE.jpg" alt="LINEのQRコード" />
+              </picture>
+
               <a class="url" href="https://page.line.me/296lnbtf">公式LINE</a>
             </div>
             <div class="flex">
-              <img
-                class="qr"
-                src="images/QR_twitter.jpg"
-                alt="TwitterのQRコード"
-              />
+              <picture>
+                <source
+                  srcset="images/QR_twitter.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/QR_twitter.jpg"
+                  media="(max-width:500px)"
+                />
+                <source srcset="images/QR_twitter.webp" type="image/webp" />
+                <img
+                  class="qr"
+                  src="images/QR_twitter.jpg"
+                  alt="TwitterのQRコード"
+                />
+              </picture>
+
               <a class="url" href="https://twitter.com/sunamegu_megumi"
                 >Twitter</a
               >
             </div>
             <div class="flex">
-              <img
-                class="qr"
-                src="images/sunagemu_megumi_qr.jpg"
-                alt="InstagramのQRコード"
-              />
+              <picture>
+                <source
+                  srcset="images/sunagemu_megumi_qr.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/sunagemu_megumi_qr.jpg"
+                  media="(max-width:500px)"
+                />
+                <source
+                  srcset="images/sunagemu_megumi_qr.webp"
+                  type="image/webp"
+                />
+                <img
+                  class="qr"
+                  src="images/sunagemu_megumi_qr.jpg"
+                  alt="InstagramのQRコード"
+                />
+              </picture>
+
               <a class="url" href="https://www.instagram.com/sunagemu_megumi/"
                 >Instagram</a
               >
