--- a/students.html
+++ b/students.html
@@ -142,14 +142,14 @@
         <h2>短期アルバイト</h2>
         <div class="container mt-4">
           <div id="short" class="row gy-3">
-            <script type="text/javascript" src="js/short.js"></script>
+            <script type="text/javascript" defer src="js/short.js"></script>
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
         <h2>単発バイト</h2>
         <div class="container mt-4">
           <div id="single" class="row gy-3">
-            <script type="text/javascript" src="js/single.js"></script>
+            <script type="text/javascript" defer src="js/single.js"></script>
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
@@ -157,7 +157,11 @@
           <h1>ボランティア募集</h1>
           <div class="container mt-4">
             <div id="volunteer" class="row gy-3">
-              <script type="text/javascript" src="js/volunteer.js"></script>
+              <script
+                type="text/javascript"
+                defer
+                src="js/volunteer.js"
+              ></script>
             </div>
           </div>
         </div>
@@ -167,7 +171,7 @@
           <h1>その他イベント</h1>
           <div class="container mt-4">
             <div id="others" class="row gy-3">
-              <script type="text/javascript" src="js/others.js"></script>
+              <script type="text/javascript" defer src="js/others.js"></script>
             </div>
           </div>
         </div>
